--- a/index.htm
+++ b/index.htm
@@ -1,61 +1,69 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Letiko - Mobile Applications Software Development</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-<meta name="description" content="">
-<meta name="author" content="Letiko">
-<meta name="keywords" content="software outsourcing, software development, mobile applications, android applications, ios applications, security analysis"
-<!-- Styles -->
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link rel="stylesheet" href="inc/visualcaptcha.css" media="all" />
-<!--[if lt IE 7]>
-    <link href="css/fontello-ie7.css" type="text/css" rel="stylesheet">  
-<![endif]-->
-<link href="css/bootstrap-responsive.css" rel="stylesheet">
-<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<!-- Favicon -->
-<link rel="shortcut icon" href="img/favicon.ico">
-<!-- JQuery -->
-<script type="text/javascript" src="js/jquery.js"></script>
-<!-- Load ScrollTo -->
-<script type="text/javascript" src="js/jquery.scrollTo-1.4.2-min.js"></script>
-<!-- Load LocalScroll -->
-<script type="text/javascript" src="js/jquery.localscroll-1.2.7-min.js"></script>
-<script type="text/javascript" src="js/touchTouch.jquery.js"></script>
-<script type="text/javascript" src="js/contacts_toggle.js"></script>
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript">
-(function (d, w, c) {
-    (w[c] = w[c] || []).push(function() {
-        try {
-            w.yaCounter38288850 = new Ya.Metrika({
-                id:38288850,
-                clickmap:true,
-                trackLinks:true,
-                accurateTrackBounce:true
-            });
-        } catch(e) { }
-    });
+    <meta charset="utf-8">
+    <title>Letiko - Outsourcing Software Development</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    <meta name="description" content="Outsourcing software development for all established computer platforms: iOS, Android, macOS, Windows, Linux, Embedded">
+    <meta name="author" content="Letiko">
+    <meta name="keywords" content="software outsourcing,software development,mobile applications,android applications,ios applications,security analysis">
 
-    var n = d.getElementsByTagName("script")[0],
-        s = d.createElement("script"),
-        f = function () { n.parentNode.insertBefore(s, n); };
-    s.type = "text/javascript";
-    s.async = true;
-    s.src = "https://mc.yandex.ru/metrika/watch.js";
+    <!-- Styles -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="inc/visualcaptcha.css" media="all" />
 
-    if (w.opera == "[object Opera]") {
-        d.addEventListener("DOMContentLoaded", f, false);
-    } else { f(); }
-})(document, window, "yandex_metrika_callbacks");
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/38288850" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!--[if lt IE 7]>
+        <link href="css/fontello-ie7.css" type="text/css" rel="stylesheet">  
+    <![endif]-->
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon.ico">
+
+    <!-- JQuery -->
+    <script type="text/javascript" src="js/jquery.js"></script>
+
+    <!-- Load ScrollTo -->
+    <script type="text/javascript" src="js/jquery.scrollTo-1.4.2-min.js"></script>
+
+    <!-- Load LocalScroll -->
+    <script type="text/javascript" src="js/jquery.localscroll-1.2.7-min.js"></script>
+    <script type="text/javascript" src="js/touchTouch.jquery.js"></script>
+    <script type="text/javascript" src="js/contacts_toggle.js"></script>
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter38288850 = new Ya.Metrika({
+                    id:38288850,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true
+                });
+            } catch(e) { }
+        });
+
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/38288850" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 </head>
 <body> 
@@ -376,7 +384,7 @@
 <hr>
 <div class="footer-wrapper">
 <footer>
-  <small>&copy; 2010-2016 Letiko. All rights reserved.</small>
+  <small>&copy; 2010-2017 Letiko. All rights reserved.</small>
 </footer>
 </div>
 <!-- Loading the javaScript at the end of the page -->
@@ -387,3 +395,4 @@
 </body>
 </html>
 
+   
