--- a/index.htm
+++ b/index.htm
@@ -346,15 +346,15 @@
   </div><!-- ./span2 -->
 
   <div class="span2">
-    <div class="teamalign"> <img class="team-thumb img-circle" src="img/portrait-4.jpg" alt=""></div>
-    <h3>Andrey Nikandrov</h3>
-    <div class="job-position">business&nbsp;development</div>
+    <div class="teamalign"> <img class="team-thumb img-circle" src="img/portrait-2.jpg" alt=""></div>
+    <h3>Katerina Vinogradnaya</h3>
+    <div class="job-position">Full-stack developer<br />iOS&nbsp;/&nbsp;web</div>
   </div><!-- ./span2 -->
 
   <div class="span2">
-    <div class="teamalign"> <img class="team-thumb img-circle" src="img/portrait-2.jpg" alt=""></div>
-    <h3>Katerina Vinogradnaya</h3>
-    <div class="job-position">engineer<br />iOS&nbsp;/&nbsp;web</div>
+    <div class="teamalign"> <img class="team-thumb img-circle" src="img/portrait-5.jpg" alt=""></div>
+    <h3>Tania Vinogradnaya</h3>
+    <div class="job-position">Graphics&nbsp;designer</div>
   </div><!-- ./span2 -->
 
   <div class="span2">
@@ -395,4 +395,3 @@
 </body>
 </html>
 
-   
